Fix margin issue on mobile by adding style to body

--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -21,6 +21,8 @@ a
     text-decoration: none
 
 body
+    margin-bottom: 50px
+
     .image-overlay
         position: absolute
         background-color: rgba(0, 0, 0, 0.7)
@@ -144,7 +146,7 @@ body
     #contact-wrapper
         #contact
             text-align: center
-            margin: 150px auto 250px
+            margin: 150px auto 200px
 
             p
                 color: $black
@@ -163,9 +165,6 @@ body
                     color: $black
                     margin: 0px 15px
                     font-size: 22px
-
-    #spacing-div
-        margin-top: 50px
 
 @media screen and (min-width: 400px)
     body
